[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Young <wook2124@naver.com>"]
description = ""
name = "python-challenge"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23"
beautifulsoup4 = "^4.9"
[tool.poetry.dev-dependencies]
